solve basic case f() + g()